--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,21 @@
 /captures
 .externalNativeBuild
 .cxx
+
+
+*.iml
+*.bat
+*.apk
+# app用到zip的请忽略
+*.zip
+# 自定义了local.properties的请删除这条
+*.properties
+/captures
+~$*
+gradlew
+.DS_Store
+.idea
+.gradle
+# 自定义了根目录gradle/gradle-wrapper.properties的请删除这条（不推荐自定义）
+gradle
+build
